tests/sumo/tls/errors/next_loop/errors.sumo
Warning: Phase 4 only loops backs to itself in tlLogic '0', program '2'.
